# aloof-innkeep

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  grant-access.sh  seam-setup.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  run.yml
src/: event_filter.rs  gmail.rs  google.rs  ics.rs  logger.rs  main.rs  models.rs  seam.rs
src/commands/: audit.rs  auth_gmail.rs  create_codes.rs  mod.rs  sync.rs
