[package]
name = "aloof-innkeep"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
regex = "1"
lazy_static = "1.4"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
